--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,16 @@ authors = ["Harald Vohringer"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+pyro-ppl = "^1.8.1"
 
 [tool.poetry.dev-dependencies]
+pytest = "^7.1.2"
+pytest-cov = "^3.0.0"
+black = "^22.3.0"
+isort = "^5.10.1"
+flake8 = "^4.0.1"
+bandit = "^1.7.4"
+safety = "^1.10.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
