--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,15 @@
 [tool.poetry]
 name = "pyromaniac"
+packages = [
+    { include = "pyromaniac" },
+]
 version = "0.1.0"
 description = "Helper modules for pyro."
 authors = ["Harald Vohringer"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-pyro-ppl = "^1.8.1"
+pyro-ppl = "^1.8.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
