--- a/.github/workflows/branch.yaml
+++ b/.github/workflows/branch.yaml
@@ -35,6 +35,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
+      - uses: psf/black@stable
       - uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
